--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,7 @@
 title: "Tutoriales y reflexiones"
 description: |
   Página web personal del profesor Alfonso Garmendia
-output_dir: "docs"
+output_dir: "."
 site: distill::distill_website
 ---
 
